Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Mon Jun 29 16:17:32 2015 +0200

	NminOnePlot.cxx: Fixed THStack plotting problem.

	THStack not needed because the background samples are already
	merged with hadd. Added the missing ET plot with the cut suggested
	by TMVA for the jet1_pt and the n_jet variable.

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Mon Jun 29 14:11:43 2015 +0000

	MiniReaderAlg.h, MiniReaderAlg.cxx, runMiniReader.cxx, runSensitivityTMVA.cxx,
	sendTMVA.sh: Modified to run on the new data sets.

	runMiniReader.cxx:
	Changed the TTree name from MiniTree to MiniTree_NoSys for
	the compressed spectra.
	Changed the TChain names.

	MiniReaderAlg.cxx:
	Changed the luminosity initialization value to 1fb.
	Changed cross section and efficiency factors for the
	compressed spectra.
	Improved the search for the "All" bin.
	Now using mc_event_weight instead of the
	global_event_weight due to the addition of pile up.

	runSensitivityTMVA.cxx:
	Changed output filename for compressed spectra signal.

	sendTMVA.sh:
	adapted to use the new names for the signal samples

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Wed Jun 24 16:51:10 2015 +0200

	runSensitivityTMVA.cxx: Modified to run on all backgrounds.

	Added vector of backgrounds:

	+  back_names.push_back(argv[2]);
	+  back_names.push_back(argv[3]);
	+  back_names.push_back(argv[4]);
	+  back_names.push_back(argv[5]);
	+  back_names.push_back(argv[6]);
	+  back_names.push_back(argv[7]);
	+  back_names.push_back(argv[8]);
	+  back_names.push_back(argv[9]);
	+
	+  std::string use_var = argv[10];

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Wed Jun 24 16:49:22 2015 +0200

	runMiniReader.cxx: Adding TChains to run on all backgrounds:

	+ sh.add(SH::makeFromTChain("ZnunuSamples", chain_znunu));
	+ sh.add(SH::makeFromTChain("ZmumuSamples", chain_zmumu));
	+ sh.add(SH::makeFromTChain("ZeeSamples", chain_zee));
	+ sh.add(SH::makeFromTChain("ZtautauSamples", chain_ztautau));